Texture border generation. Adjacent faces uses stale UV map when in edit mode. #95250

Closed
opened 2022-01-27 13:08:29 +01:00 by Martijn Versteegh · 14 comments

Broken version: Blender 3.1 alpha 60bd6804db
Last Working Verstion: This is new code which wasn't available in previous versions.

patch:
https://developer.blender.org/D13938

Border generation uses stale UV map if Uv map has changed and you are still in edit mode.

Steps to reproduce from default startup

  • Setup a material on the default cube with a noise texture on the base color and an unconnected empty image texture to bake to, Select the image texture.
  • Go to the UV workspace.
  • Go to editmode.
  • Select all and rotate the UV mesh
  • Go to cycles -> baking and bake diffuse color with Adjacent faces as margin algorithm and a nonzero border.
    after baking, the baking result is screwed up because the margin is generated with the unrotated UV map.'
Broken version: Blender 3.1 alpha 60bd6804dbd87b5f1907f208394b69610941fd1b Last Working Verstion: This is new code which wasn't available in previous versions. patch: https://developer.blender.org/D13938 Border generation uses stale UV map if Uv map has changed and you are still in edit mode. Steps to reproduce from default startup - Setup a material on the default cube with a noise texture on the base color and an unconnected empty image texture to bake to, Select the image texture. - Go to the UV workspace. - Go to editmode. - Select all and rotate the UV mesh - Go to cycles -> baking and bake diffuse color with Adjacent faces as margin algorithm and a nonzero border. after baking, the baking result is screwed up because the margin is generated with the unrotated UV map.'
Author
Member

Added subscriber: @Baardaap

Added subscriber: @Baardaap
Martijn Versteegh self-assigned this 2022-01-27 13:08:45 +01:00
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Confirmed' to: 'Needs User Info'

Changed status from 'Confirmed' to: 'Needs User Info'
Member

@Baardaap : please (as for everyone else) include an example .blend file and reproductions steps (in addition to all the other required information from https://developer.blender.org/maniphest/task/edit/form/1/

@Baardaap : please (as for everyone else) include an example .blend file and reproductions steps (in addition to all the other required information from https://developer.blender.org/maniphest/task/edit/form/1/
Author
Member

Added subscriber: @mont29

Added subscriber: @mont29
Author
Member

@lichtwerk Sorry. As I was already very far along the way in fixing this bug, and I claimed the task myself, it seemed like a waste of time to go through the motions. Should I still add it after the fact? I can understand it would help in reviewing maybe?
It's too late to do it today, but I could cook up a demonstration .blend tomorrow if needed.
@mont29 I asked in the developer chat how I should handle this. As it is a bugfix that should go into 3.1 I was specifically asked to tag it with 3.1. Shouldn't I have done that?

@lichtwerk Sorry. As I was already very far along the way in fixing this bug, and I claimed the task myself, it seemed like a waste of time to go through the motions. Should I still add it after the fact? I can understand it would help in reviewing maybe? It's too late to do it today, but I could cook up a demonstration .blend tomorrow if needed. @mont29 I asked in the developer chat how I should handle this. As it is a bugfix that should go into 3.1 I was specifically asked to tag it with 3.1. Shouldn't I have done that?
Author
Member
added patch: https://developer.blender.org/D13938
Author
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Author
Member

@mont29 This one and #95249 should go in 3.1, or this new feature will be broken . Should I set the tag back to Blender (3.1)?

@mont29 This one and #95249 should go in 3.1, or this new feature will be broken . Should I set the tag back to Blender (3.1)?
Author
Member

This comment was removed by @Baardaap

*This comment was removed by @Baardaap*

@Baardaap yes please do, and thanks for updating the tasks (and for the patches!).

@Baardaap yes please do, and thanks for updating the tasks (and for the patches!).

This issue was referenced by 8ad5241778

This issue was referenced by 8ad5241778ccad18754b333b804b6898f108b087

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 3.1 milestone 2023-02-08 15:53:04 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95250
No description provided.